# kiri-geometry

./: README.md  pyproject.toml
kiri-geometry/: regression.py
kiri_geometry/: __init__.py  regression.py
kiri_geometry/components/: __init__.py  line.py  tools.py
